--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,21 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+     <a class="navbar-brand" href="#">Estructura de datos ejercicios</a>
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+           <li class="nav-item"><a class="nav-link" routerLink="/ejercicio1">Ejercicio 1</a></li>
+           <li class="nav-item"><a class="nav-link" routerLink="/ejercicio2">Ejercicio 2</a></li>
+           <li class="nav-item"><a class="nav-link" routerLink="/ejercicio3">Ejercicio 3</a></li>
+           <li class="nav-item"><a class="nav-link" routerLink="/ejercicio4">Ejercicio 4</a></li>
+           <li class="nav-item"><a class="nav-link" routerLink="/ejercicio5">Ejercicio 5</a></li>
+           <li class="nav-item"><a class="nav-link" routerLink="/ejercicio6">Ejercicio 6</a></li>
+           <li class="nav-item"><a class="nav-link" routerLink="/ejercicio7">Ejercicio 7</a></li>
+        </ul>
+     </div>
+  </div>
+</nav>
+
 <router-outlet></router-outlet>
