--- a/src/app/components/ejercicio1/ejercicio1.component.html
+++ b/src/app/components/ejercicio1/ejercicio1.component.html
@@ -1,1 +1,23 @@
-<p>ejercicio1 works!</p>
+<div class="container mt-4">
+  <a class="btn btn-secondary" routerLink="/">
+    <i class="fas fa-arrow-left"></i> Volver al Home
+  </a>
+  <div class="card">
+    <div class="card-header">Ejercicio 1: Contar ceros en una matriz 4x4</div>
+    <div class="card-body">
+      <h5>Ingresa los valores de la matriz</h5>
+      <div *ngFor="let row of [0, 1, 2, 3]; let rowIndex = index" class="row mb-2">
+        <div *ngFor="let col of [0, 1, 2, 3]; let colIndex = index" class="col">
+          <input type="number" [(ngModel)]="matrix[rowIndex][colIndex]" class="form-control" placeholder="0">
+        </div>
+      </div>
+      <button class="btn btn-primary mt-3" (click)="countZeros()">Calcular ceros</button>
+      <div *ngIf="result.length > 0" class="mt-3">
+        <h5>Resultado:</h5>
+        <ul>
+          <li *ngFor="let res of result; let i = index">Fila {{ i + 1 }} tiene {{ res }} ceros.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
