--- a/src/app/components/ejercicio3/ejercicio3.component.html
+++ b/src/app/components/ejercicio3/ejercicio3.component.html
@@ -1,1 +1,22 @@
-<p>ejercicio3 works!</p>
+<div class="container mt-4">
+  <div class="card">
+    <div class="card-header">Ejercicio 3: Operaciones con matrices 2x2</div>
+    <div class="card-body">
+      <h5>Matriz 1</h5>
+      <div *ngFor="let row of [0, 1]">
+        <input type="number" [(ngModel)]="matrix1[row][0]" class="form-control" placeholder="Valor">
+        <input type="number" [(ngModel)]="matrix1[row][1]" class="form-control" placeholder="Valor">
+      </div>
+      <h5 class="mt-3">Matriz 2</h5>
+      <div *ngFor="let row of [0, 1]">
+        <input type="number" [(ngModel)]="matrix2[row][0]" class="form-control" placeholder="Valor">
+        <input type="number" [(ngModel)]="matrix2[row][1]" class="form-control" placeholder="Valor">
+      </div>
+      <button class="btn btn-primary mt-3" (click)="calculate()">Calcular</button>
+      <div *ngIf="results.length > 0" class="mt-3">
+        <h5>Resultados:</h5>
+        <p *ngFor="let result of results">{{ result }}</p>
+      </div>
+    </div>
+  </div>
+</div>
