--- a/src/app/components/ejercicio5/ejercicio5.component.html
+++ b/src/app/components/ejercicio5/ejercicio5.component.html
@@ -1,1 +1,22 @@
-<p>ejercicio5 works!</p>
+<div class="container mt-4">
+  <div class="card">
+    <div class="card-header">Ejercicio 5: Suma y promedio de filas y columnas</div>
+    <div class="card-body">
+      <button class="btn btn-primary mb-3" (click)="generateMatrix()">Generar Matriz</button>
+      <div *ngIf="matrix.length > 0">
+        <h5>Matriz:</h5>
+        <table class="table table-bordered">
+          <tr *ngFor="let row of matrix">
+            <td *ngFor="let cell of row">{{ cell }}</td>
+          </tr>
+        </table>
+
+        <h5 class="mt-3">Resultados:</h5>
+        <p>Suma de cada fila: {{ rowSums }}</p>
+        <p>Promedio de cada fila: {{ rowAverages }}</p>
+        <p>Suma de cada columna: {{ colSums }}</p>
+        <p>Promedio de cada columna: {{ colAverages }}</p>
+      </div>
+    </div>
+  </div>
+</div>
